<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_file"
        android:onClick="onCreateFileClick" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_file"
        android:onClick="onReadFileClick" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_file"
        android:onClick="onDeleteFileClick" />
	<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
	    <TextView
	        android:id="@+id/file_view"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/file_view" />
	</ScrollView>        
</LinearLayout>